--- a/twitter.html
+++ b/twitter.html
@@ -11,11 +11,14 @@
                 <header>
 
                 </header>
-                <div class="content">
-
+                <div class="box content">
+                  <img id="img" src="Twitter_Logo_Blue.png">
+                </div>
+                <div class="box wordzone">
+                  robots for days
                 </div>
                 <footer>
-                    
+                    hi?
                 </footer>
             </article>
         </main>
