--- a/twitter.html
+++ b/twitter.html
@@ -8,13 +8,28 @@
     <body>
         <main id="feed">
             <article class="tweet">
-                <header>
-
-                </header>
-                <div class="box content">
+                    <header>
+                <div class="content floatleft">
                   <img id="img" src="Twitter_Logo_Blue.png">
+                  </div>
+                  <div class="floatleft">
+                  <h4>@STRIKER</h4>
+                  </div>
+              </header>
+                <div class="wordzone">
+                  robots for days
                 </div>
-                <div class="box wordzone">
+                <footer>
+                </footer>
+            </article>
+            <article class="tweet">
+                <div class="content">
+                    <header>
+                  <img id="img" src="Twitter_Logo_Blue.png">
+                  <h4>@TurtleMan</h4>
+              </header>
+                </div>
+                <div class="wordzone floatleft">
                   robots for days
                 </div>
                 <footer>
