--- a/twitter.html
+++ b/twitter.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Fake Twitter</title>
         <link rel="stylesheet" href="birdstyles.css">
+        <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     </head>
     <body>
         <main id="feed">
@@ -13,27 +14,26 @@
                   <img id="img" src="Twitter_Logo_Blue.png">
                   </div>
                   <div class="floatleft">
-                  <h4>@STRIKER</h4>
+                  <p>ROBOTS <span class="bold">@STRIKER</span></p>
                   </div>
               </header>
                 <div class="wordzone">
-                  robots for days
+                  <h6>TIGER PIGS</h6>
+                  <img id="bodyimg" src="tigerpig2.jpg">
                 </div>
                 <footer>
-                </footer>
-            </article>
-            <article class="tweet">
-                <div class="content">
-                    <header>
-                  <img id="img" src="Twitter_Logo_Blue.png">
-                  <h4>@TurtleMan</h4>
-              </header>
-                </div>
-                <div class="wordzone floatleft">
-                  robots for days
-                </div>
-                <footer>
-                    hi?
+                    <div class="floatleft mleft">
+                        <i class="far fa-comments"> </i>
+                    </div>
+                    <div class="floatleft mleft">
+                        <i class="fas fa-retweet"> </i>
+                    </div>
+                    <div class="floatleft mleft">
+                        <i class="far fa-heart"> </i>
+                    </div>
+                    <div class="floatleft mleft">
+                        <i class="fas fa-share-square"> </i>
+                    </div>
                 </footer>
             </article>
         </main>
