--- a/twitter.html
+++ b/twitter.html
@@ -1,41 +1,105 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Fake Twitter</title>
-        <link rel="stylesheet" href="birdstyles.css">
-        <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-    </head>
-    <body>
-        <main id="feed">
-            <article class="tweet">
-                    <header>
+<head>
+    <meta charset="utf-8">
+    <title>Fake Twitter</title>
+    <link rel="stylesheet" href="birdstyles.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+</head>
+<body>
+    <main id="feed">
+        <article class="tweet">
+            <header>
                 <div class="content floatleft">
-                  <img id="img" src="Twitter_Logo_Blue.png">
-                  </div>
-                  <div class="floatleft">
-                  <p>ROBOTS <span class="bold">@STRIKER</span></p>
-                  </div>
-              </header>
-                <div class="wordzone">
-                  <h6>TIGER PIGS</h6>
-                  <img id="bodyimg" src="tigerpig2.jpg">
+                    <img id="img" src="Twitter_Logo_Blue.png">
                 </div>
-                <footer>
-                    <div class="floatleft mleft">
-                        <i class="far fa-comments"> </i>
-                    </div>
-                    <div class="floatleft mleft">
-                        <i class="fas fa-retweet"> </i>
-                    </div>
-                    <div class="floatleft mleft">
-                        <i class="far fa-heart"> </i>
-                    </div>
-                    <div class="floatleft mleft">
-                        <i class="fas fa-share-square"> </i>
-                    </div>
-                </footer>
-            </article>
-        </main>
-    </body>
+                <div class="floatleft">
+                    <p>ROBOTS <span class="bold"><a href="http://www.stpatrickrobotics.org/">@STRIKER</a></span></p>
+                </div>
+            </header>
+            <div class="wordzone">
+                <p>TIGER PIGS: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <img id="bodyimg" src="tigerpig2.jpg">
+            </div>
+            <footer>
+                <div class="floatleft mleft">
+                    <i class="far fa-comments"> </i>
+                </div>
+                <div class="floatleft mleft">
+                    <i class="fas fa-retweet"> </i>
+                </div>
+                <div class="floatleft mleft">
+                    <i class="far fa-heart"> </i>
+                </div>
+                <div class="floatleft mleft">
+                    <i class="fas fa-share-square"> </i>
+                </div>
+            </footer>
+        </article>
+        <article class="tweet">
+            <header>
+                <div class="content floatleft">
+                    <img id="img" src="Twitter_Logo_Blue.png">
+                </div>
+                <div class="floatleft">
+                    <p>ROBOTS <span class="bold"><a href="http://www.stpatrickrobotics.org/">@STRIKER</a></span></p>
+                </div>
+            </header>
+            <div class="wordzone">
+                <p>SHAMBOTS GO TO STATE:
+                    <br>
+                        Our very own FTC teams, Shambot Green (#10240) and Shambot Gold (#10481) made it to the FTC Illinois State Championship!
+                    </br>
+                </p>
+                <img id="bodyimg" src="Fleming.jpg">
+            </div>
+            <footer>
+                <div class="floatleft mleft">
+                    <i class="far fa-comments"> </i>
+                </div>
+                <div class="floatleft mleft">
+                    <i class="fas fa-retweet"> </i>
+                </div>
+                <div class="floatleft mleft">
+                    <i class="far fa-heart"> </i>
+                </div>
+                <div class="floatleft mleft">
+                    <i class="fas fa-share-square"> </i>
+                </div>
+            </footer>
+        </article>
+        <article class="tweet">
+            <header>
+                <div class="content floatleft">
+                    <img id="img" src="Twitter_Logo_Blue.png">
+                </div>
+                <div class="floatleft">
+                    <p>ROBOTS <span class="bold"><a href="http://www.stpatrickrobotics.org/">@STRIKER</a></span></p>
+                </div>
+            </header>
+            <div class="wordzone">
+                <p>How to get away with murder:
+                    <br>
+                        This is very complicated subject. Just kill the dude, bury him, and run.
+                    </br>
+                </p>
+                <img id="bodyimg" src="murder.jpg">
+            </div>
+            <footer>
+                <div class="floatleft mleft">
+                    <i class="far fa-comments"> </i>
+                </div>
+                <div class="floatleft mleft">
+                    <i class="fas fa-retweet"> </i>
+                </div>
+                <div class="floatleft mleft">
+                    <i class="far fa-heart"> </i>
+                </div>
+                <div class="floatleft mleft">
+                    <i class="fas fa-share-square"> </i>
+                </div>
+            </footer>
+        </article>
+    </main>
+</body>
 </html>
